// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyserJsonTransformer should transform as expected 1`] = `
Object {
  "drugsResistance": Object {
    "mdr": false,
    "xdr": false,
  },
  "evidence": Object {
    "Isoniazid": Array [
      Array [
        "Resistance mutation found: S315X in gene katG",
        "Depth 82 on the resistant allele",
        "Depth 1 on the susceptible allele",
      ],
    ],
  },
  "hasResistance": true,
  "hasSpecies": true,
  "inconclusive": Array [],
  "inducible": Array [],
  "lineage": Array [
    "European_American",
  ],
  "lineageString": "European American",
  "negative": Array [],
  "positive": Array [],
  "resistant": Array [
    "Isoniazid",
  ],
  "species": Array [
    "Mycobacterium_tuberculosis",
  ],
  "speciesAndLineageString": "Mycobacterium tuberculosis (lineage: European American)",
  "speciesString": "Mycobacterium tuberculosis",
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "katG (S315X)",
      "resistant": true,
      "susceptible": false,
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
  },
  "susceptible": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Rifampicin",
    "Amikacin",
    "Capreomycin",
  ],
}
`;

exports[`AnalyserJsonTransformer should transform as expected 2`] = `
Object {
  "drugsResistance": Object {
    "mdr": true,
    "xdr": false,
  },
  "evidence": Object {
    "Isoniazid": Array [
      Array [
        "Resistance mutation found: S315X in gene katG",
        "Depth 43 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Rifampicin": Array [
      Array [
        "Resistance mutation found: S450X in gene rpoB",
        "Depth 51 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
  },
  "hasResistance": true,
  "hasSpecies": true,
  "inconclusive": Array [],
  "inducible": Array [],
  "lineage": Array [
    "European_American",
  ],
  "lineageString": "European American",
  "negative": Array [],
  "positive": Array [],
  "resistant": Array [
    "Isoniazid",
    "Rifampicin",
  ],
  "species": Array [
    "Mycobacterium_tuberculosis",
  ],
  "speciesAndLineageString": "Mycobacterium tuberculosis (lineage: European American)",
  "speciesString": "Mycobacterium tuberculosis",
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "katG (S315X)",
      "resistant": true,
      "susceptible": false,
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpoB (S450X)",
      "resistant": true,
      "susceptible": false,
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
  },
  "susceptible": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Amikacin",
    "Capreomycin",
  ],
}
`;

exports[`AnalyserJsonTransformer should transform as expected 3`] = `
Object {
  "hasResistance": false,
  "hasSpecies": true,
  "lineage": Array [
    "Unknown",
  ],
  "lineageString": "Unknown",
  "species": Array [
    "Mycobacterium_kansasii",
  ],
  "speciesAndLineageString": "Mycobacterium kansasii (lineage: Unknown)",
  "speciesString": "Mycobacterium kansasii",
}
`;

exports[`AnalyserJsonTransformer should transform as expected 4`] = `
Object {
  "drugsResistance": Object {
    "mdr": false,
    "xdr": false,
  },
  "evidence": Object {
    "Rifampicin": Array [
      Array [
        "Resistance mutation found: H445X in gene rpoB",
        "Depth 28 on the resistant allele",
        "Depth 98 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: S450X in gene rpoB",
        "Depth 100 on the resistant allele",
        "Depth 40 on the susceptible allele",
      ],
    ],
  },
  "hasResistance": true,
  "hasSpecies": true,
  "inconclusive": Array [],
  "inducible": Array [],
  "lineage": Array [
    "European_American",
  ],
  "lineageString": "European American",
  "negative": Array [],
  "positive": Array [],
  "resistant": Array [
    "Rifampicin",
  ],
  "species": Array [
    "Mycobacterium_tuberculosis",
  ],
  "speciesAndLineageString": "Mycobacterium tuberculosis (lineage: European American)",
  "speciesString": "Mycobacterium tuberculosis",
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpoB (S450X)",
      "resistant": true,
      "susceptible": false,
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
  },
  "susceptible": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Isoniazid",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Amikacin",
    "Capreomycin",
  ],
}
`;

exports[`AnalyserJsonTransformer should transform as expected 5`] = `
Object {
  "drugsResistance": Object {
    "mdr": true,
    "xdr": true,
  },
  "evidence": Object {
    "Amikacin": Array [
      Array [
        "Resistance mutation found: A1401X in gene rrs",
        "Depth 52 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Capreomycin": Array [
      Array [
        "Resistance mutation found: A1401X in gene rrs",
        "Depth 52 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Ciprofloxacin": Array [
      Array [
        "Resistance mutation found: A90V in gene gyrA",
        "Depth 13 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: D94G in gene gyrA",
        "Depth 18 on the resistant allele",
        "Depth 11 on the susceptible allele",
      ],
    ],
    "Ethambutol": Array [
      Array [
        "Resistance mutation found: M306V in gene embB",
        "Depth 45 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Isoniazid": Array [
      Array [
        "Resistance mutation found: S315X in gene katG",
        "Depth 30 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Kanamycin": Array [
      Array [
        "Resistance mutation found: A1401X in gene rrs",
        "Depth 52 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Moxifloxacin": Array [
      Array [
        "Resistance mutation found: A90V in gene gyrA",
        "Depth 13 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: D94G in gene gyrA",
        "Depth 18 on the resistant allele",
        "Depth 11 on the susceptible allele",
      ],
    ],
    "Ofloxacin": Array [
      Array [
        "Resistance mutation found: A90V in gene gyrA",
        "Depth 13 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: D94G in gene gyrA",
        "Depth 18 on the resistant allele",
        "Depth 11 on the susceptible allele",
      ],
    ],
    "Pyrazinamide": Array [
      Array [
        "Resistance mutation found: H137R in gene pncA",
        "Depth 7 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
    ],
    "Rifampicin": Array [
      Array [
        "Resistance mutation found: S450X in gene rpoB",
        "Depth 44 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Streptomycin": Array [
      Array [
        "Resistance mutation found: K43R in gene rpsL",
        "Depth 56 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
  },
  "hasResistance": true,
  "hasSpecies": true,
  "inconclusive": Array [],
  "inducible": Array [],
  "lineage": Array [
    "Beijing_East_Asia",
  ],
  "lineageString": "Beijing East Asia",
  "negative": Array [],
  "positive": Array [],
  "resistant": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Isoniazid",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Rifampicin",
    "Amikacin",
    "Capreomycin",
  ],
  "species": Array [
    "Mycobacterium_tuberculosis",
  ],
  "speciesAndLineageString": "Mycobacterium tuberculosis (lineage: Beijing East Asia)",
  "speciesString": "Mycobacterium tuberculosis",
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rrs (A1401X)",
      "resistant": true,
      "susceptible": false,
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rrs (A1401X)",
      "resistant": true,
      "susceptible": false,
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "gyrA (D94G)",
      "resistant": true,
      "susceptible": false,
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "embB (M306V)",
      "resistant": true,
      "susceptible": false,
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "katG (S315X)",
      "resistant": true,
      "susceptible": false,
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rrs (A1401X)",
      "resistant": true,
      "susceptible": false,
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "gyrA (D94G)",
      "resistant": true,
      "susceptible": false,
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "gyrA (D94G)",
      "resistant": true,
      "susceptible": false,
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "pncA (H137R)",
      "resistant": true,
      "susceptible": false,
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpoB (S450X)",
      "resistant": true,
      "susceptible": false,
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpsL (K43R)",
      "resistant": true,
      "susceptible": false,
    },
  },
  "susceptible": Array [],
}
`;

exports[`AnalyserJsonTransformer susceptibilityTransformer should transform as expected 1`] = `
Object {
  "evidence": Object {
    "Isoniazid": Array [
      Array [
        "Resistance mutation found: S315X in gene katG",
        "Depth 82 on the resistant allele",
        "Depth 1 on the susceptible allele",
      ],
    ],
  },
  "inconclusive": Array [],
  "inducible": Array [],
  "resistant": Array [
    "Isoniazid",
  ],
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "katG (S315X)",
      "resistant": true,
      "susceptible": false,
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
  },
  "susceptible": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Rifampicin",
    "Amikacin",
    "Capreomycin",
  ],
}
`;

exports[`AnalyserJsonTransformer susceptibilityTransformer should transform as expected 2`] = `
Object {
  "evidence": Object {
    "Isoniazid": Array [
      Array [
        "Resistance mutation found: S315X in gene katG",
        "Depth 43 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Rifampicin": Array [
      Array [
        "Resistance mutation found: S450X in gene rpoB",
        "Depth 51 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
  },
  "inconclusive": Array [],
  "inducible": Array [],
  "resistant": Array [
    "Isoniazid",
    "Rifampicin",
  ],
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "katG (S315X)",
      "resistant": true,
      "susceptible": false,
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpoB (S450X)",
      "resistant": true,
      "susceptible": false,
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
  },
  "susceptible": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Amikacin",
    "Capreomycin",
  ],
}
`;

exports[`AnalyserJsonTransformer susceptibilityTransformer should transform as expected 3`] = `
Object {
  "evidence": Object {},
  "inconclusive": Array [],
  "inducible": Array [],
  "resistant": Array [],
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
  },
  "susceptible": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Isoniazid",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Rifampicin",
    "Amikacin",
    "Capreomycin",
  ],
}
`;

exports[`AnalyserJsonTransformer susceptibilityTransformer should transform as expected 4`] = `
Object {
  "evidence": Object {
    "Rifampicin": Array [
      Array [
        "Resistance mutation found: H445X in gene rpoB",
        "Depth 28 on the resistant allele",
        "Depth 98 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: S450X in gene rpoB",
        "Depth 100 on the resistant allele",
        "Depth 40 on the susceptible allele",
      ],
    ],
  },
  "inconclusive": Array [],
  "inducible": Array [],
  "resistant": Array [
    "Rifampicin",
  ],
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpoB (S450X)",
      "resistant": true,
      "susceptible": false,
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "resistant": false,
      "susceptible": true,
    },
  },
  "susceptible": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Isoniazid",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Amikacin",
    "Capreomycin",
  ],
}
`;

exports[`AnalyserJsonTransformer susceptibilityTransformer should transform as expected 5`] = `
Object {
  "evidence": Object {
    "Amikacin": Array [
      Array [
        "Resistance mutation found: A1401X in gene rrs",
        "Depth 52 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Capreomycin": Array [
      Array [
        "Resistance mutation found: A1401X in gene rrs",
        "Depth 52 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Ciprofloxacin": Array [
      Array [
        "Resistance mutation found: A90V in gene gyrA",
        "Depth 13 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: D94G in gene gyrA",
        "Depth 18 on the resistant allele",
        "Depth 11 on the susceptible allele",
      ],
    ],
    "Ethambutol": Array [
      Array [
        "Resistance mutation found: M306V in gene embB",
        "Depth 45 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Isoniazid": Array [
      Array [
        "Resistance mutation found: S315X in gene katG",
        "Depth 30 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Kanamycin": Array [
      Array [
        "Resistance mutation found: A1401X in gene rrs",
        "Depth 52 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Moxifloxacin": Array [
      Array [
        "Resistance mutation found: A90V in gene gyrA",
        "Depth 13 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: D94G in gene gyrA",
        "Depth 18 on the resistant allele",
        "Depth 11 on the susceptible allele",
      ],
    ],
    "Ofloxacin": Array [
      Array [
        "Resistance mutation found: A90V in gene gyrA",
        "Depth 13 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: D94G in gene gyrA",
        "Depth 18 on the resistant allele",
        "Depth 11 on the susceptible allele",
      ],
    ],
    "Pyrazinamide": Array [
      Array [
        "Resistance mutation found: H137R in gene pncA",
        "Depth 7 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
    ],
    "Rifampicin": Array [
      Array [
        "Resistance mutation found: S450X in gene rpoB",
        "Depth 44 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Streptomycin": Array [
      Array [
        "Resistance mutation found: K43R in gene rpsL",
        "Depth 56 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
  },
  "inconclusive": Array [],
  "inducible": Array [],
  "resistant": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Isoniazid",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Rifampicin",
    "Amikacin",
    "Capreomycin",
  ],
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rrs (A1401X)",
      "resistant": true,
      "susceptible": false,
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rrs (A1401X)",
      "resistant": true,
      "susceptible": false,
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "gyrA (D94G)",
      "resistant": true,
      "susceptible": false,
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "embB (M306V)",
      "resistant": true,
      "susceptible": false,
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "katG (S315X)",
      "resistant": true,
      "susceptible": false,
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rrs (A1401X)",
      "resistant": true,
      "susceptible": false,
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "gyrA (D94G)",
      "resistant": true,
      "susceptible": false,
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "gyrA (D94G)",
      "resistant": true,
      "susceptible": false,
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "pncA (H137R)",
      "resistant": true,
      "susceptible": false,
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpoB (S450X)",
      "resistant": true,
      "susceptible": false,
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpsL (K43R)",
      "resistant": true,
      "susceptible": false,
    },
  },
  "susceptible": Array [],
}
`;
